Use correct Test annotation and use PreferencesBuilder